Fixed bug where double click was needed for profiles button. Moved the visibility property from the stylesheet to the index html

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ h1 {
 }
 
 .hidden-front-page {
-  visibility: hidden;
   margin-top: 3%;
 }
 
@@ -131,7 +130,7 @@ button::before, button::after {
   position: absolute;
   box-shadow: 0 0 5em 0.5em var(--clr-blue);
   transform: perspective(1em) rotateX(53deg);
-  opacity: 0.05;
+  opacity: 0.07;
   transition: opacity 100ms linear;
   margin-left: -6em;
   margin-top: 5em;
